--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 plugins:
+  - jekyll-feed
   - jekyll-sitemap
+  - jekyll-seo-tag
 
-# SEO Stuff
-author: salif
+author: main
 title: "Блогът на Салиф"
-description: "Блог за програмиране, технологии, изкуствени езици и всичко останало."
+description: "Блог за програмиране, изкуствени езици и всичко останало."
 lang: bg
 locale: bg_BG
 url: "https://blog.salif.eu"
@@ -15,6 +16,8 @@ goatcounter_code: "blosaleu"
 translate_code: "blog-salif-eu"
 disqus_code: "blog-salif-eu"
 
-# RSS feeds
 feed:
+  disable_in_development: true
   posts_limit: 20
+  categories:
+    - 0
