--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
   - jekyll-archives
 
 title: "Блогът на Салиф"
-description: "Блог за програмиране, изкуствени езици и всичко останало. #nobridge"
+description: "Блог за програмиране, изкуствени езици и всичко останало."
 lang: bg
 locale: bg_BG
 url: "https://blog.salif.eu"
